Fix layout on mobile landscape.

--- a/styles/app.css
+++ b/styles/app.css
@@ -86,16 +86,41 @@ a:active {
 
 #home-menu {
     position: fixed;
-    top: calc((100svh - 540px) * 0.5);
+    top: calc((100svh - 620px) * 0.5);
     left: calc((100vw - min(100vw, 700px)) * 0.5);
     width: min(100vw, 700px);
     pointer-events: none;
     text-align: center;
+    outline: 1px solid red;
+}
+
+@media (max-height: 700px) {
+    #home-menu {
+        top: calc((100svh - 390px) * 0.5);
+    }
+
+    #home-menu div {
+        display: inline-block;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding: 0;
+        vertical-align: top;
+    }
 }
 
 @media (max-height: 540px) {
     #home-menu {
         top: calc((100svh - 310px) * 0.5);
+    }
+
+    #home-menu h1 {
+        position: absolute;
+        right: 51%;
+    }
+
+    #home-menu .spacer {
+        display: block;
+        visibility: hidden;
     }
 
     #home-menu div {
@@ -439,6 +464,10 @@ button:hover, .hovered {
     background-position: center;
 }
 
+.spacer {
+    display: none;
+}
+
 .square-btn-container {
     display: flex;
     flex-direction: column;
@@ -465,6 +494,10 @@ button:hover, .hovered {
     display: flex;
     flex: 1;
     flex-direction: row;
+}
+
+.square-btn-container-halfline .square-btn {
+    font-size: 20px;
 }
 
 .square-btn-panel stroke-text {
